--- a/.cproject
+++ b/.cproject
@@ -268,6 +268,7 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/lvgl&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/lvgl/examples/lv_tutorial&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/app_sound/inc&quot;"/>
 								</option>
 								<option id="com.renesas.cdt.managedbuild.gcc.rz.option.compiler.cpp.language.1499460805" name="Language standard" superClass="com.renesas.cdt.managedbuild.gcc.rz.option.compiler.cpp.language" useByScannerDiscovery="true" value="com.renesas.cdt.managedbuild.gcc.rz.option.compiler.cpp.language.default" valueType="enumerated"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.option.compiler.cpp.otherOptimization.552569327" name="Other optimization flags" superClass="com.renesas.cdt.managedbuild.gcc.rz.option.compiler.cpp.otherOptimization" useByScannerDiscovery="true" valueType="stringList">
@@ -325,7 +326,7 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Libraries/FreeRTOS/rza/Debug_StreamIt_eGML&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Libraries/FreeRTOS/rza&quot;"/>
 								</option>
-								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.cpp.option.linkageOrder.685801398" name="Linkage Order List" superClass="com.renesas.cdt.managedbuild.gcc.rz.cpp.option.linkageOrder" valueType="stringList">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.cpp.option.linkageOrder.685801398" name="Linkage Order List" superClass="com.renesas.cdt.managedbuild.gcc.rz.cpp.option.linkageOrder" useByScannerDiscovery="false" valueType="stringList">
 									<listOptionValue builtIn="false" value="&quot;.\src/renesas/middleware/video/src\r_rvapi_ceu.o&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;.\src/renesas/middleware/video/src\r_rvapi_vdc.o&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;.\src/renesas/middleware/video/src\r_rvapi_vdec.o&quot;"/>
